Weird auto-normalize behavior in weight paint with locked groups. #47123

Closed
opened 2016-01-05 20:14:18 +01:00 by Alexander Gavrilov · 8 comments

System Information

Fedora 21

Blender Version

Broken: 2.76b

Exact steps for others to reproduce the error

Load this blend file: test-weight-norm.blend

Note that Auto Normalize, Multipaint and Mirror are off. Click on the selected vertex to paint.

    ==> You can see on the right that a 'new' group is added with weight 1 as expected.
   .

Undo the paint, lock the lock_me group in the list, and click on the vertex again.

   ==> Now, unexpectedly, the 'new' group only gets weight 0.3, and all other unlocked groups are wiped.
    Investigation shows that this is caused by a switch to a different code branch, which calls the `enforce_locks` function in `paint_vertex.c`. Further debugging uncovers a sign problem in `redistribute_change`.
    .

Apply this patch, and try painting with locked group again: 0001-Fix-sign-error-in-redistribute_change-to-avoid-too-m.patch

   ==> The painted weight now is 0.9, which matches the expected value with Auto-Normalize on, but it is off. This result is better than before, but:
   .

Undo, change the paint weight to 0.6 and try painting again.

   ==> Now some of the weight remains in the other 3 groups, and it is evident that it is not proper normalization that keeps the proportion betwen them. Instead, 0.2 is simply subtracted from each one.

In order to understand the code better and see if it's possible to solve the last problem, I tried disabling enforce_locks. This made it evident that the function forces normalize to obey locks by in fact doing an ersatz normalization so that the real normalize step becomes a no-op. As an experiment I tried making the real normalization aware of locked groups, and that seems to result in correct proportional weights. However I don't understand what's going on in that code re multipainting:

0002-Experiment-try-to-replace-enforce_locks-with-lock-su.patch

It may also be the case that with lock support in normalize code, there is now no need to enter the multipainting branch just because of the locks.

**System Information** Fedora 21 **Blender Version** Broken: 2.76b **Exact steps for others to reproduce the error** Load this blend file: [test-weight-norm.blend](https://archive.blender.org/developer/F271631/test-weight-norm.blend) # Note that Auto Normalize, Multipaint and Mirror are off. Click on the selected vertex to paint. ``` ==> You can see on the right that a 'new' group is added with weight 1 as expected. ``` ``` . ``` # Undo the paint, lock the lock_me group in the list, and click on the vertex again. ``` ==> Now, unexpectedly, the 'new' group only gets weight 0.3, and all other unlocked groups are wiped. ``` ``` Investigation shows that this is caused by a switch to a different code branch, which calls the `enforce_locks` function in `paint_vertex.c`. Further debugging uncovers a sign problem in `redistribute_change`. ``` ``` . ``` # Apply this patch, and try painting with locked group again: [0001-Fix-sign-error-in-redistribute_change-to-avoid-too-m.patch](https://archive.blender.org/developer/F271632/0001-Fix-sign-error-in-redistribute_change-to-avoid-too-m.patch) ``` ==> The painted weight now is 0.9, which matches the expected value with Auto-Normalize on, but it is off. This result is better than before, but: ``` ``` . ``` # Undo, change the paint weight to 0.6 and try painting again. ``` ==> Now some of the weight remains in the other 3 groups, and it is evident that it is not proper normalization that keeps the proportion betwen them. Instead, 0.2 is simply subtracted from each one. ``` In order to understand the code better and see if it's possible to solve the last problem, I tried disabling `enforce_locks`. This made it evident that the function forces normalize to obey locks by in fact doing an ersatz normalization so that the real normalize step becomes a no-op. As an experiment I tried making the real normalization aware of locked groups, and that seems to result in correct proportional weights. However I don't understand what's going on in that code re multipainting: [0002-Experiment-try-to-replace-enforce_locks-with-lock-su.patch](https://archive.blender.org/developer/F271633/0002-Experiment-try-to-replace-enforce_locks-with-lock-su.patch) It may also be the case that with lock support in normalize code, there is now no need to enter the multipainting branch just because of the locks.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @angavrilov

Added subscriber: @angavrilov
Author
Member

Actually realized that this test illustrates an even worse problem:

Use unpatched blender, lock lock_me, enable Auto-Normalize, paint. It sets the new group to 0.75, and changes the locked group to 0.25.

This issue should also be mitigated by the first simple patch, since it achieves valid normalization.

Actually realized that this test illustrates an even worse problem: Use unpatched blender, lock lock_me, enable Auto-Normalize, paint. It sets the new group to 0.75, and *changes the locked group* to 0.25. This issue should also be mitigated by the first simple patch, since it achieves valid normalization.
Campbell Barton self-assigned this 2016-01-06 14:12:23 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey
- Applied: [0001-Fix-sign-error-in-redistribute_change-to-avoid-too-m.patch](https://archive.blender.org/developer/F271632/0001-Fix-sign-error-in-redistribute_change-to-avoid-too-m.patch) 3a51a90e56 - Fixed the strange behavior with locking unintentionally enabling normalize 10ac7c0f15

Committed change that makes normalize respect locks, d67535eea0

@angavrilov, Can you double check issues from this report are now resolved?

Committed change that makes normalize respect locks, d67535eea0 @angavrilov, Can you double check issues from this report are now resolved?

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closing
Logic changed here enough that new issues can be raised as new bugs.

Closing Logic changed here enough that new issues can be raised as new bugs.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47123
No description provided.